--- a/configuration.yaml
+++ b/configuration.yaml
@@ -19,7 +19,7 @@ automation:
         {% set a = states("sensor.maghrib_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.maghrib_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
-    action:
+    action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
         data_template:
           topic: 'commande/play/mini'
@@ -37,7 +37,7 @@ automation:
         {% set a = states("sensor.asr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.asr_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
-    action:
+    action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
         data_template:
           topic: 'commande/play/mini'
@@ -55,7 +55,7 @@ automation:
         {% set a = states("sensor.dhuhr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.dhuhr_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
-    action:
+    action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
         data_template:
           topic: 'commande/play/mini'
@@ -73,7 +73,7 @@ automation:
         {% set a = states("sensor.isha_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.isha_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
-    action:
+    action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
         data_template:
           topic: 'commande/play/mini'
@@ -91,7 +91,7 @@ automation:
         {% set a = states("sensor.fajr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.fajr_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
-    action:
+    action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
         data_template:
           topic: 'commande/play/mini'
@@ -112,7 +112,7 @@ automation:
         {% set before5 = (as_timestamp(states('sensor.fajr_mawaqit')) - 10 * 60) | timestamp_custom("%H:%M")   %}
         {% set b1 = states("sensor.date_time").split(" ")[1] | timestamp_custom("%H:%M") %}
         {{ b1  == before1 or b1  == before2 or b1  == before3 or b1  == before4 or b1  == before5   }}
-    action:
+    action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
         data_template:
           topic: 'commande/play/mini'
@@ -133,7 +133,7 @@ automation:
         {% set before5 = (as_timestamp(states('sensor.fajr_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
         {% set b1 = states("sensor.date_time").split(" ")[1] | timestamp_custom("%H:%M") %}
         {{ b1  == before1 or b1  == before2 or b1  == before3 or b1  == before4 or b1  == before5   }}
-    action:
+    action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       service: mqtt.publish
       data_template:
         topic: 'commande/say/mini'
