--- a/custom_components/mawaqit/manifest.json
+++ b/custom_components/mawaqit/manifest.json
@@ -1,7 +1,10 @@
 {
-  "domain": "mawaqit",
-  "name": "Mawaqit",
-  "documentation": "https://github.com/yac69/homeassistant-mawaqit",
-  "codeowners": ["@yac69"],
-  "config_flow": true
+  "domain": "mawaqit_prayer_times",
+  "name": "Mawaqit Prayer Times",
+  "documentation": "https://www.home-assistant.io/integrations/mawaqit_prayer_times",
+  "requirements": ["mawaqit_times_calculator>=0.0.4"],
+  "codeowners": ["@iyac69"],
+  "config_flow": true,
+  "iot_class": "cloud_polling",
+  "version": "2.0.0"
 }
