--- a/custom_components/mawaqit/manifest.json
+++ b/custom_components/mawaqit/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "mawaqit_prayer_times",
   "name": "Mawaqit Prayer Times",
-  "documentation": "https://github.com/mawaqit/home-assistant",
-  "requirements": ["mawaqit_times_calculator>=0.0.4","pymysql"],
-  "codeowners": ["@mawaqit"],
+  "documentation": "https://www.home-assistant.io/integrations/mawaqit_prayer_times",
+  "requirements": ["mawaqit_times_calculator>=1.0.2"],
+  "codeowners": ["@iyac69"],
   "config_flow": true,
   "iot_class": "cloud_polling",
   "version": "2.0.0"
