--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,6 +7,13 @@ sensor:
       - 'time'
       - 'date_time'
 
+template:
+  - sensor:
+      - name: "time to next prayer"
+        unit_of_measurement: "min"
+        state: '{{ ((as_timestamp(states("sensor.next_salat_time")) - (as_timestamp(now())))/60) | int }}'
+
+
 input_datetime:
   next_salat_time:
     name: next salat time
@@ -25,8 +32,8 @@ automation:
       value_template: >
         {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
-        {% set a = states("sensor.maghrib_mawaqit").split(" ")[1].split(":")[0] %}
-        {% set b = states("sensor.maghrib_mawaqit").split(":")[1] %}
+        {% set a = states("sensor.maghrib_adhan").split(" ")[1].split(":")[0] %}
+        {% set b = states("sensor.maghrib_adhan").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
@@ -43,8 +50,8 @@ automation:
       value_template: >
         {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
-        {% set a = states("sensor.asr_mawaqit").split(" ")[1].split(":")[0] %}
-        {% set b = states("sensor.asr_mawaqit").split(":")[1] %}
+        {% set a = states("sensor.asr_adhan").split(" ")[1].split(":")[0] %}
+        {% set b = states("sensor.asr_adhan").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
@@ -61,8 +68,8 @@ automation:
       value_template: >
         {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
-        {% set a = states("sensor.dhuhr_mawaqit").split(" ")[1].split(":")[0] %}
-        {% set b = states("sensor.dhuhr_mawaqit").split(":")[1] %}
+        {% set a = states("sensor.dhuhr_adhan").split(" ")[1].split(":")[0] %}
+        {% set b = states("sensor.dhuhr_adhan").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
@@ -79,8 +86,8 @@ automation:
       value_template: >
         {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
-        {% set a = states("sensor.isha_mawaqit").split(" ")[1].split(":")[0] %}
-        {% set b = states("sensor.isha_mawaqit").split(":")[1] %}
+        {% set a = states("sensor.isha_adhan").split(" ")[1].split(":")[0] %}
+        {% set b = states("sensor.isha_adhan").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
@@ -97,8 +104,8 @@ automation:
       value_template: >
         {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
-        {% set a = states("sensor.fajr_mawaqit").split(" ")[1].split(":")[0] %}
-        {% set b = states("sensor.fajr_mawaqit").split(":")[1] %}
+        {% set a = states("sensor.fajr_adhan").split(" ")[1].split(":")[0] %}
+        {% set b = states("sensor.fajr_adhan").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
@@ -114,11 +121,11 @@ automation:
     trigger:
       platform: template
       value_template: >
-        {% set before1 = (as_timestamp(states('sensor.maghrib_mawaqit')) - 10 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before2 = (as_timestamp(states('sensor.isha_mawaqit')) - 10 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before3 = (as_timestamp(states('sensor.dhuhr_mawaqit')) - 10 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before4 = (as_timestamp(states('sensor.fajr_mawaqit')) - 60 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before5 = (as_timestamp(states('sensor.fajr_mawaqit')) - 10 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before1 = (as_timestamp(states('sensor.maghrib_adhan')) - 10 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before2 = (as_timestamp(states('sensor.isha_adhan')) - 10 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before3 = (as_timestamp(states('sensor.dhuhr_adhan')) - 10 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before4 = (as_timestamp(states('sensor.fajr_adhan')) - 60 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before5 = (as_timestamp(states('sensor.fajr_adhan')) - 10 * 60) | timestamp_custom("%H:%M")   %}
         {% set b1 = states("sensor.date_time").split(" ")[1] | timestamp_custom("%H:%M") %}
         {{ b1  == before1 or b1  == before2 or b1  == before3 or b1  == before4 or b1  == before5   }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
@@ -135,11 +142,11 @@ automation:
     trigger:
       platform: template
       value_template: >
-        {% set before1 = (as_timestamp(states('sensor.maghrib_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before2 = (as_timestamp(states('sensor.isha_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before3 = (as_timestamp(states('sensor.dhuhr_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before4 = (as_timestamp(states('sensor.fajr_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
-        {% set before5 = (as_timestamp(states('sensor.fajr_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before1 = (as_timestamp(states('sensor.maghrib_adhan')) - 1 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before2 = (as_timestamp(states('sensor.isha_adhan')) - 1 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before3 = (as_timestamp(states('sensor.dhuhr_adhan')) - 1 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before4 = (as_timestamp(states('sensor.fajr_adhan')) - 1 * 60) | timestamp_custom("%H:%M")   %}
+        {% set before5 = (as_timestamp(states('sensor.fajr_adhan')) - 1 * 60) | timestamp_custom("%H:%M")   %}
         {% set b1 = states("sensor.date_time").split(" ")[1] | timestamp_custom("%H:%M") %}
         {{ b1  == before1 or b1  == before2 or b1  == before3 or b1  == before4 or b1  == before5   }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
