--- a/blueprints/automation/mawaqit/Blueprint-Mawaqit_Time_Notification.yaml
+++ b/blueprints/automation/mawaqit/Blueprint-Mawaqit_Time_Notification.yaml
@@ -1,26 +1,29 @@
 blueprint:
   name: Mawaqit Time Notification
-  description: Notification at the time of the mawaqit prayers. PLEASE make sure to
+  description:
+    Notification at the time of the mawaqit prayers. PLEASE make sure to
     install 'Mawaqit Prayer Times' integration before you use this blueprint.
   domain: automation
   input:
     Mobile_to_Notify:
       name: Mobile 1 Device to notify
-      description: Device needs to run the official Home Assistant app to receive
+      description:
+        Device needs to run the official Home Assistant app to receive
         notifications.
-      default: ''
+      default: ""
       selector:
         device:
           integration: mobile_app
     Mobile2_to_Notify:
       name: Mobile 2 Device to notify
-      description: Device needs to run the official Home Assistant app to receive
+      description:
+        Device needs to run the official Home Assistant app to receive
         notifications.
-      default: ''
+      default: ""
       selector:
         device:
-          integration: mobile_app          
-          
+          integration: mobile_app
+
     Media_Player_to_Notify:
       name: Media Player to play Athan
       description: Choose Media player device to play the Athan.
@@ -32,240 +35,175 @@ blueprint:
       description: Name of the playlist that contains the Athan sound or mp3 link if using service music
     Athan_Media_Fajr:
       name: Athan Media Fajr
-      description: Name of the playlist that contains the Fajr Athan sound or mp3 link if using service music      
+      description: Name of the playlist that contains the Fajr Athan sound or mp3 link if using service music
     Music_Service:
       name: Music Service
       description: Name of the music service you are subscribed to.
       selector:
         select:
           options:
-          - music
-          - APPLE_MUSIC
-          - AMAZON_MUSIC
-          - SPOTIFY
+            - music
+            - APPLE_MUSIC
+            - AMAZON_MUSIC
+            - SPOTIFY
   source_url: https://gist.github.com/shadynafie/1bc4e28717fe0955a828e8d092f7e4bf
+
 trigger:
-- platform: time
-  at: sensor.fajr_mawaqit
-  id: Fajr
-- platform: time
-  id: Duhr
-  at: sensor.dhuhr_mawaqit
-- platform: time
-  id: Asr
-  at: sensor.asr_mawaqit
-- platform: time
-  at: sensor.maghrib_mawaqit
-  id: Maghrib
-- platform: time
-  at: sensor.isha_mawaqit
-  id: Isha
-- platform: time
-  at: sensor.sunrise_time
-  id: Shuruq
-- platform: time
-  at: input_datetime.next_prep_salat_time
-  id: prep  
-- platform: time
-  at: "02:00:00"
-  id: veille  
-    
+  - platform: time
+    at: sensor.next_salat_time
+    id: salat
+  - platform: time
+    id: prep
+    at: sensor.next_salat_preparation_time
+
 condition: []
 action:
-- choose:
-  - conditions:
-    - condition: trigger
-      id: prep
-    sequence:
-    - service: input_number.set_value
-      target:
-        entity_id: input_number.chapitre_index
-      data:
-        value: '{{ range(100,114) | random | int }}'
-  - conditions:
-    - condition: trigger
-      id: Shuruq
-    sequence:
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد شروق الشمس 
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile2_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد شروق الشمس 
-  - conditions:
-    - condition: trigger
-      id: Fajr
-    sequence:
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة الفجر
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile2_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة الفجر
-    - service: media_player.play_media
-      target:
-        entity_id: !input 'Media_Player_to_Notify'
-      data:
-        media_content_id: !input 'Athan_Media_Fajr'
-        media_content_type: !input 'Music_Service'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.dhuhr_mawaqit.state) }}'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_prep_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.dhuhr_mawaqit.state) - 600}}'
-    
-  - conditions:
-    - condition: trigger
-      id: Duhr
-    sequence:
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة الظهر
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile2_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة الظهر
-    - service: media_player.play_media
-      target:
-        entity_id: !input 'Media_Player_to_Notify'
-      data:
-        media_content_id: !input 'Athan_Media'
-        media_content_type: !input 'Music_Service'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.asr_mawaqit.state) }}'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_prep_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.asr_mawaqit.state) - 600}}'        
-  - conditions:
-    - condition: trigger
-      id: Asr
-    sequence:
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة العصر
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile2_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة العصر
-    - service: media_player.play_media
-      target:
-        entity_id: !input 'Media_Player_to_Notify'
-      data:
-        media_content_id: !input 'Athan_Media'
-        media_content_type: !input 'Music_Service'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.maghrib_mawaqit.state) }}'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_prep_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.maghrib_mawaqit.state) - 600}}'        
-  - conditions:
-    - condition: trigger
-      id: Maghrib
-    sequence:
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة المغرب
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile2_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة المغرب
-    - service: media_player.play_media
-      target:
-        entity_id: !input 'Media_Player_to_Notify'
-      data:
-        media_content_id: !input 'Athan_Media'
-        media_content_type: !input 'Music_Service'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.isha_mawaqit.state) }}'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_prep_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.isha_mawaqit.state) - 600}}'         
-  - conditions:
-    - condition: trigger
-      id: Isha
-    sequence:
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة العشاء
-    - type: notify
-      domain: mobile_app
-      device_id: !input 'Mobile2_to_Notify'
-      title: 🕌 Prayer Time 🕌
-      message: حان الآن موعد صلاة العشاء
-    - service: media_player.play_media
-      target:
-        entity_id: !input 'Media_Player_to_Notify'
-      data:
-        media_content_id: !input 'Athan_Media'
-        media_content_type: !input 'Music_Service'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.fajr_mawaqit.state + 86400) }}'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_prep_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.fajr_mawaqit.state) - 600 + 86400}}' 
-        
-  - conditions:
-    - condition: trigger
-      id: veille
-    sequence:
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.fajr_mawaqit.state ) }}'
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: input_datetime.next_prep_salat_time
-      data:
-        timestamp: '{{ as_timestamp(states.sensor.fajr_mawaqit.state) - 600 }}'            
-        
-        
-  default: []
+  - choose:
+      - conditions:
+          - condition: trigger
+            id: prep
+        sequence:
+          - service: input_number.set_value
+            target:
+              entity_id: input_number.chapitre_index
+            data:
+              value: "{{ range(100,114) | random | int }}"
+
+      - conditions:
+          - condition: trigger
+            id: salat
+          - condition: state
+            entity_id: "sensor.next_salat_name"
+            state: "Shurouq"
+        sequence:
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد شروق الشمس
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile2_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد شروق الشمس
+      - conditions:
+          - condition: trigger
+            id: salat
+          - condition: state
+            entity_id: "sensor.next_salat_name"
+            state: "Fajr"
+        sequence:
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة الفجر
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile2_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة الفجر
+          - service: media_player.play_media
+            target:
+              entity_id: !input "Media_Player_to_Notify"
+            data:
+              media_content_id: !input "Athan_Media_Fajr"
+              media_content_type: !input "Music_Service"
+
+      - conditions:
+          - condition: trigger
+            id: salat
+          - condition: state
+            entity_id: "sensor.next_salat_name"
+            state: "Dhuhr"
+        sequence:
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة الظهر
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile2_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة الظهر
+          - service: media_player.play_media
+            target:
+              entity_id: !input "Media_Player_to_Notify"
+            data:
+              media_content_id: !input "Athan_Media"
+              media_content_type: !input "Music_Service"
+
+      - conditions:
+          - condition: trigger
+            id: salat
+          - condition: state
+            entity_id: "sensor.next_salat_name"
+            state: "Asr"
+        sequence:
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة العصر
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile2_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة العصر
+          - service: media_player.play_media
+            target:
+              entity_id: !input "Media_Player_to_Notify"
+            data:
+              media_content_id: !input "Athan_Media"
+              media_content_type: !input "Music_Service"
+
+      - conditions:
+          - condition: trigger
+            id: salat
+          - condition: state
+            entity_id: "sensor.next_salat_name"
+            state: "Maghrib"
+        sequence:
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة المغرب
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile2_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة المغرب
+          - service: media_player.play_media
+            target:
+              entity_id: !input "Media_Player_to_Notify"
+            data:
+              media_content_id: !input "Athan_Media"
+              media_content_type: !input "Music_Service"
+      - conditions:
+          - condition: trigger
+            id: salat
+          - condition: state
+            entity_id: "sensor.next_salat_name"
+            state: "Isha"
+        sequence:
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة العشاء
+          - type: notify
+            domain: mobile_app
+            device_id: !input "Mobile2_to_Notify"
+            title: 🕌 Prayer Time 🕌
+            message: حان الآن موعد صلاة العشاء
+          - service: media_player.play_media
+            target:
+              entity_id: !input "Media_Player_to_Notify"
+            data:
+              media_content_id: !input "Athan_Media"
+              media_content_type: !input "Music_Service"
+
+    default: []
 mode: single
-
-
-
