Extract hours & minutes using `states("sensor.time")`

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,7 +14,7 @@ automation:
     trigger:
       platform: template
       value_template: >
-        {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
+        {% set a1 = states("sensor.time").split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
         {% set a = states("sensor.maghrib_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.maghrib_mawaqit").split(":")[1] %}
@@ -32,7 +32,7 @@ automation:
     trigger:
       platform: template
       value_template: >
-        {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
+        {% set a1 = states("sensor.time").split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
         {% set a = states("sensor.asr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.asr_mawaqit").split(":")[1] %}
@@ -50,7 +50,7 @@ automation:
     trigger:
       platform: template
       value_template: >
-        {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
+        {% set a1 = states("sensor.time").split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
         {% set a = states("sensor.dhuhr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.dhuhr_mawaqit").split(":")[1] %}
@@ -68,7 +68,7 @@ automation:
     trigger:
       platform: template
       value_template: >
-        {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
+        {% set a1 = states("sensor.time").split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
         {% set a = states("sensor.isha_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.isha_mawaqit").split(":")[1] %}
@@ -86,7 +86,7 @@ automation:
     trigger:
       platform: template
       value_template: >
-        {% set a1 = states("sensor.date_time").split(" ")[1].split(":")[0]  %}
+        {% set a1 = states("sensor.time").split(":")[0]  %}
         {% set b1 = states("sensor.date_time").split(":")[1] %}
         {% set a = states("sensor.fajr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.fajr_mawaqit").split(":")[1] %}
@@ -110,7 +110,7 @@ automation:
         {% set before3 = (as_timestamp(states('sensor.dhuhr_mawaqit')) - 10 * 60) | timestamp_custom("%H:%M")   %}
         {% set before4 = (as_timestamp(states('sensor.fajr_mawaqit')) - 60 * 60) | timestamp_custom("%H:%M")   %}
         {% set before5 = (as_timestamp(states('sensor.fajr_mawaqit')) - 10 * 60) | timestamp_custom("%H:%M")   %}
-        {% set b1 = states("sensor.date_time").split(" ")[1] | timestamp_custom("%H:%M") %}
+        {% set b1 = states("sensor.time") | timestamp_custom("%H:%M") %}
         {{ b1  == before1 or b1  == before2 or b1  == before3 or b1  == before4 or b1  == before5   }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       - service: mqtt.publish
@@ -131,7 +131,7 @@ automation:
         {% set before3 = (as_timestamp(states('sensor.dhuhr_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
         {% set before4 = (as_timestamp(states('sensor.fajr_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
         {% set before5 = (as_timestamp(states('sensor.fajr_mawaqit')) - 1 * 60) | timestamp_custom("%H:%M")   %}
-        {% set b1 = states("sensor.date_time").split(" ")[1] | timestamp_custom("%H:%M") %}
+        {% set b1 = states("sensor.time") | timestamp_custom("%H:%M") %}
         {{ b1  == before1 or b1  == before2 or b1  == before3 or b1  == before4 or b1  == before5   }}
     action: # the action below is given as an example and is to adapt based on on your homeassistant installation
       service: mqtt.publish
