--- a/configuration.yaml
+++ b/configuration.yaml
@@ -15,7 +15,7 @@ automation:
       platform: template
       value_template: >
         {% set a1 = states("sensor.time").split(":")[0]  %}
-        {% set b1 = states("sensor.date_time").split(":")[1] %}
+        {% set b1 = states("sensor.time").split(":")[1] %}
         {% set a = states("sensor.maghrib_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.maghrib_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
@@ -33,7 +33,7 @@ automation:
       platform: template
       value_template: >
         {% set a1 = states("sensor.time").split(":")[0]  %}
-        {% set b1 = states("sensor.date_time").split(":")[1] %}
+        {% set b1 = states("sensor.time").split(":")[1] %}
         {% set a = states("sensor.asr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.asr_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
@@ -51,7 +51,7 @@ automation:
       platform: template
       value_template: >
         {% set a1 = states("sensor.time").split(":")[0]  %}
-        {% set b1 = states("sensor.date_time").split(":")[1] %}
+        {% set b1 = states("sensor.time").split(":")[1] %}
         {% set a = states("sensor.dhuhr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.dhuhr_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
@@ -69,7 +69,7 @@ automation:
       platform: template
       value_template: >
         {% set a1 = states("sensor.time").split(":")[0]  %}
-        {% set b1 = states("sensor.date_time").split(":")[1] %}
+        {% set b1 = states("sensor.time").split(":")[1] %}
         {% set a = states("sensor.isha_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.isha_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
@@ -87,7 +87,7 @@ automation:
       platform: template
       value_template: >
         {% set a1 = states("sensor.time").split(":")[0]  %}
-        {% set b1 = states("sensor.date_time").split(":")[1] %}
+        {% set b1 = states("sensor.time").split(":")[1] %}
         {% set a = states("sensor.fajr_mawaqit").split(" ")[1].split(":")[0] %}
         {% set b = states("sensor.fajr_mawaqit").split(":")[1] %}
         {{ b | int == b1 | int and a | int == a1 | int  }}
