--- a/custom_components/mawaqit/manifest.json
+++ b/custom_components/mawaqit/manifest.json
@@ -1,9 +1,9 @@
 {
-  "domain": "mawaqit",
-  "name": "Mawaqit",
-  "documentation": "https://www.home-assistant.io/integrations/mawaqit_prayer_times",
+  "domain": "MAWAQIT",
+  "name": "MAWAQIT",
+  "documentation": "https://github.com/mawaqit/home-assistant",
   "requirements": [],
-  "codeowners": ["@mawaqit"],
+  "codeowners": ["@MAWAQIT"],
   "config_flow": true,
   "iot_class": "cloud_polling",
   "version": "2.0.0"
