--- a/custom_components/mawaqit/manifest.json
+++ b/custom_components/mawaqit/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "MAWAQIT",
+  "domain": "mawaqit",
   "name": "MAWAQIT",
   "documentation": "https://github.com/mawaqit/home-assistant",
   "requirements": [],
