--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-
-custom_components/.DS_Store
+custom_components/mawaqit/data
+custom_components/mawaqit/test.py
+custom_components/mawaqit/mosq_list.py
 custom_components/.DS_Store
 .DS_Store
-custom_components/mawaqit/data
