--- a/custom_components/mawaqit/manifest.json
+++ b/custom_components/mawaqit/manifest.json
@@ -1,11 +1,17 @@
 {
   "domain": "mawaqit",
   "name": "MAWAQIT",
-  "documentation": "https://github.com/mawaqit/home-assistant",
-  "requirements": ["mawaqit==0.0.1"],
-  "integration_type": "hub",
-  "codeowners": ["@MAWAQIT", "@mohaThr"],
+  "codeowners": [
+    "@MAWAQIT",
+    "@mohaThr",
+    "@Yeyvo"
+  ],
   "config_flow": true,
+  "documentation": "https://github.com/mawaqit/home-assistant",
+  "integration_type": "hub",
   "iot_class": "cloud_polling",
-  "version": "2.0.0"
+  "requirements": [
+    "mawaqit==0.0.1"
+  ],
+  "version": "2.1.0"
 }
